// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterForm should render component with apps and categories 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type search"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="searchTerm"
                type="search"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                App or Developer Name
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type search"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="companyName"
                type="search"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Company Name
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type search"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="id"
                type="search"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Internal App Id
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type search"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="externalAppId"
                type="search"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                External App Id
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type date format dd/mm/yyy"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="registeredFrom"
                type="date"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Registered From
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type date format dd/mm/yyy"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="registeredTo"
                type="date"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Registered To
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type date format dd/mm/yyy"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="publicListedDateFrom"
                type="date"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Publicly Listed From
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type date format dd/mm/yyy"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="publicListedDateTo"
                type="date"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Publicly Listed To
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <label
                class="mocked-styled-41 el-label"
              >
                In Public AppMarket
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-public-all"
                  name="isPublic"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-public-all"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-public-true"
                  name="isPublic"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-public-true"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    Public
                  </span>
                </label>
                <input
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-public-false"
                  name="isPublic"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-public-false"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    Private
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <label
                class="mocked-styled-41 el-label"
              >
                Integration or AC Enabled
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-integration-all"
                  name="isDirectApi"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-integration-all"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-integration-true"
                  name="isDirectApi"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-integration-true"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    Integration
                  </span>
                </label>
                <input
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-integration-false"
                  name="isDirectApi"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-integration-false"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    AC App
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <label
                class="mocked-styled-41 el-label"
              >
                Publicly Listed
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-listed-all"
                  name="isListed"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-listed-all"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-listed-true"
                  name="isListed"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-listed-true"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    Listed
                  </span>
                </label>
                <input
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-listed-false"
                  name="isListed"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-listed-false"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    Development
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <label
                class="mocked-styled-41 el-label"
              >
                Is Charged Consumption
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-consumption-all"
                  name="isChargedConsumption"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-consumption-all"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-consumption-true"
                  name="isChargedConsumption"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-consumption-true"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    Charged
                  </span>
                </label>
                <input
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-consumption-false"
                  name="isChargedConsumption"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-consumption-false"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    Free
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="mocked-styled-135 el-input-wrap-full"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <label
                class="mocked-styled-41 el-label"
              >
                Categories
              </label>
              <div
                class="mocked-styled-58 el-multi-select-input-wrapper"
              >
                <input
                  class="mocked-styled-57 el-multi-select-input"
                  id="category"
                  name="category"
                />
                <div
                  aria-label="Multi selected options"
                  class="mocked-styled-55 el-multi-select-selected"
                  role="listbox"
                >
                  <span
                    class="el-ml2 el-intent-default el-icon-new el-icon"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      title="Icon image with name task"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <p>
                    Please select from the options below
                  </p>
                </div>
                <div
                  aria-label="Multi unselected options"
                  class="mocked-styled-56 el-multi-select-un-selected"
                  role="listbox"
                >
                  <input
                    aria-checked="false"
                    aria-hidden="true"
                    class="mocked-styled-52 el-multi-select-checkbox"
                    id="test-static-id"
                    role="option"
                    type="checkbox"
                  />
                  <label
                    class="el-has-grey-chips el-multi-select-label"
                    for="test-static-id"
                    role="option"
                    tabindex="0"
                  >
                    string
                  </label>
                  <input
                    aria-checked="false"
                    aria-hidden="true"
                    class="mocked-styled-52 el-multi-select-checkbox"
                    id="test-static-id"
                    role="option"
                    type="checkbox"
                  />
                  <label
                    class="el-has-grey-chips el-multi-select-label"
                    for="test-static-id"
                    role="option"
                    tabindex="0"
                  >
                    Tools
                  </label>
                  <input
                    aria-checked="false"
                    aria-hidden="true"
                    class="mocked-styled-52 el-multi-select-checkbox"
                    id="test-static-id"
                    role="option"
                    type="checkbox"
                  />
                  <label
                    class="el-has-grey-chips el-multi-select-label"
                    for="test-static-id"
                    role="option"
                    tabindex="0"
                  >
                    Social
                  </label>
                  <input
                    aria-checked="false"
                    aria-hidden="true"
                    class="mocked-styled-52 el-multi-select-checkbox"
                    id="test-static-id"
                    role="option"
                    type="checkbox"
                  />
                  <label
                    class="el-has-grey-chips el-multi-select-label"
                    for="test-static-id"
                    role="option"
                    tabindex="0"
                  >
                    Marketing
                  </label>
                  <input
                    aria-checked="false"
                    aria-hidden="true"
                    class="mocked-styled-52 el-multi-select-checkbox"
                    id="test-static-id"
                    role="option"
                    type="checkbox"
                  />
                  <label
                    class="el-has-grey-chips el-multi-select-label"
                    for="test-static-id"
                    role="option"
                    tabindex="0"
                  >
                    Communication
                  </label>
                  <input
                    aria-checked="false"
                    aria-hidden="true"
                    class="mocked-styled-52 el-multi-select-checkbox"
                    id="test-static-id"
                    role="option"
                    type="checkbox"
                  />
                  <label
                    class="el-has-grey-chips el-multi-select-label"
                    for="test-static-id"
                    role="option"
                    tabindex="0"
                  >
                    Media
                  </label>
                  <input
                    aria-checked="false"
                    aria-hidden="true"
                    class="mocked-styled-52 el-multi-select-checkbox"
                    id="test-static-id"
                    role="option"
                    type="checkbox"
                  />
                  <label
                    class="el-has-grey-chips el-multi-select-label"
                    for="test-static-id"
                    role="option"
                    tabindex="0"
                  >
                    Events
                  </label>
                  <input
                    aria-checked="false"
                    aria-hidden="true"
                    class="mocked-styled-52 el-multi-select-checkbox"
                    id="test-static-id"
                    role="option"
                    type="checkbox"
                  />
                  <label
                    class="el-has-grey-chips el-multi-select-label"
                    for="test-static-id"
                    role="option"
                    tabindex="0"
                  >
                    Finance
                  </label>
                  <input
                    aria-checked="false"
                    aria-hidden="true"
                    class="mocked-styled-52 el-multi-select-checkbox"
                    id="test-static-id"
                    role="option"
                    type="checkbox"
                  />
                  <label
                    class="el-has-grey-chips el-multi-select-label"
                    for="test-static-id"
                    role="option"
                    tabindex="0"
                  >
                    Productivity
                  </label>
                  <input
                    aria-checked="false"
                    aria-hidden="true"
                    class="mocked-styled-52 el-multi-select-checkbox"
                    id="test-static-id"
                    role="option"
                    type="checkbox"
                  />
                  <label
                    class="el-has-grey-chips el-multi-select-label"
                    for="test-static-id"
                    role="option"
                    tabindex="0"
                  >
                    Other
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <form>
      <div
        class="el-mb11 el-form-layout"
      >
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type search"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="searchTerm"
              type="search"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              App or Developer Name
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type search"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="companyName"
              type="search"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Company Name
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type search"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="id"
              type="search"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Internal App Id
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type search"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="externalAppId"
              type="search"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              External App Id
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type date format dd/mm/yyy"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="registeredFrom"
              type="date"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Registered From
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type date format dd/mm/yyy"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="registeredTo"
              type="date"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Registered To
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type date format dd/mm/yyy"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="publicListedDateFrom"
              type="date"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Publicly Listed From
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type date format dd/mm/yyy"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="publicListedDateTo"
              type="date"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Publicly Listed To
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              In Public AppMarket
            </label>
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            >
              <input
                checked=""
                class="mocked-styled-127 el-toggle-radio"
                id="option-public-all"
                name="isPublic"
                type="radio"
                value=""
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-public-all"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  All
                </span>
              </label>
              <input
                class="mocked-styled-127 el-toggle-radio"
                id="option-public-true"
                name="isPublic"
                type="radio"
                value="true"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-public-true"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  Public
                </span>
              </label>
              <input
                class="mocked-styled-127 el-toggle-radio"
                id="option-public-false"
                name="isPublic"
                type="radio"
                value="false"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-public-false"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  Private
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Integration or AC Enabled
            </label>
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            >
              <input
                checked=""
                class="mocked-styled-127 el-toggle-radio"
                id="option-integration-all"
                name="isDirectApi"
                type="radio"
                value=""
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-integration-all"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  All
                </span>
              </label>
              <input
                class="mocked-styled-127 el-toggle-radio"
                id="option-integration-true"
                name="isDirectApi"
                type="radio"
                value="true"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-integration-true"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  Integration
                </span>
              </label>
              <input
                class="mocked-styled-127 el-toggle-radio"
                id="option-integration-false"
                name="isDirectApi"
                type="radio"
                value="false"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-integration-false"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  AC App
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Publicly Listed
            </label>
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            >
              <input
                checked=""
                class="mocked-styled-127 el-toggle-radio"
                id="option-listed-all"
                name="isListed"
                type="radio"
                value=""
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-listed-all"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  All
                </span>
              </label>
              <input
                class="mocked-styled-127 el-toggle-radio"
                id="option-listed-true"
                name="isListed"
                type="radio"
                value="true"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-listed-true"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  Listed
                </span>
              </label>
              <input
                class="mocked-styled-127 el-toggle-radio"
                id="option-listed-false"
                name="isListed"
                type="radio"
                value="false"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-listed-false"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  Development
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Is Charged Consumption
            </label>
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            >
              <input
                checked=""
                class="mocked-styled-127 el-toggle-radio"
                id="option-consumption-all"
                name="isChargedConsumption"
                type="radio"
                value=""
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-consumption-all"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  All
                </span>
              </label>
              <input
                class="mocked-styled-127 el-toggle-radio"
                id="option-consumption-true"
                name="isChargedConsumption"
                type="radio"
                value="true"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-consumption-true"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  Charged
                </span>
              </label>
              <input
                class="mocked-styled-127 el-toggle-radio"
                id="option-consumption-false"
                name="isChargedConsumption"
                type="radio"
                value="false"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-consumption-false"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  Free
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-135 el-input-wrap-full"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Categories
            </label>
            <div
              class="mocked-styled-58 el-multi-select-input-wrapper"
            >
              <input
                class="mocked-styled-57 el-multi-select-input"
                id="category"
                name="category"
              />
              <div
                aria-label="Multi selected options"
                class="mocked-styled-55 el-multi-select-selected"
                role="listbox"
              >
                <span
                  class="el-ml2 el-intent-default el-icon-new el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    title="Icon image with name task"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <p>
                  Please select from the options below
                </p>
              </div>
              <div
                aria-label="Multi unselected options"
                class="mocked-styled-56 el-multi-select-un-selected"
                role="listbox"
              >
                <input
                  aria-checked="false"
                  aria-hidden="true"
                  class="mocked-styled-52 el-multi-select-checkbox"
                  id="test-static-id"
                  role="option"
                  type="checkbox"
                />
                <label
                  class="el-has-grey-chips el-multi-select-label"
                  for="test-static-id"
                  role="option"
                  tabindex="0"
                >
                  string
                </label>
                <input
                  aria-checked="false"
                  aria-hidden="true"
                  class="mocked-styled-52 el-multi-select-checkbox"
                  id="test-static-id"
                  role="option"
                  type="checkbox"
                />
                <label
                  class="el-has-grey-chips el-multi-select-label"
                  for="test-static-id"
                  role="option"
                  tabindex="0"
                >
                  Tools
                </label>
                <input
                  aria-checked="false"
                  aria-hidden="true"
                  class="mocked-styled-52 el-multi-select-checkbox"
                  id="test-static-id"
                  role="option"
                  type="checkbox"
                />
                <label
                  class="el-has-grey-chips el-multi-select-label"
                  for="test-static-id"
                  role="option"
                  tabindex="0"
                >
                  Social
                </label>
                <input
                  aria-checked="false"
                  aria-hidden="true"
                  class="mocked-styled-52 el-multi-select-checkbox"
                  id="test-static-id"
                  role="option"
                  type="checkbox"
                />
                <label
                  class="el-has-grey-chips el-multi-select-label"
                  for="test-static-id"
                  role="option"
                  tabindex="0"
                >
                  Marketing
                </label>
                <input
                  aria-checked="false"
                  aria-hidden="true"
                  class="mocked-styled-52 el-multi-select-checkbox"
                  id="test-static-id"
                  role="option"
                  type="checkbox"
                />
                <label
                  class="el-has-grey-chips el-multi-select-label"
                  for="test-static-id"
                  role="option"
                  tabindex="0"
                >
                  Communication
                </label>
                <input
                  aria-checked="false"
                  aria-hidden="true"
                  class="mocked-styled-52 el-multi-select-checkbox"
                  id="test-static-id"
                  role="option"
                  type="checkbox"
                />
                <label
                  class="el-has-grey-chips el-multi-select-label"
                  for="test-static-id"
                  role="option"
                  tabindex="0"
                >
                  Media
                </label>
                <input
                  aria-checked="false"
                  aria-hidden="true"
                  class="mocked-styled-52 el-multi-select-checkbox"
                  id="test-static-id"
                  role="option"
                  type="checkbox"
                />
                <label
                  class="el-has-grey-chips el-multi-select-label"
                  for="test-static-id"
                  role="option"
                  tabindex="0"
                >
                  Events
                </label>
                <input
                  aria-checked="false"
                  aria-hidden="true"
                  class="mocked-styled-52 el-multi-select-checkbox"
                  id="test-static-id"
                  role="option"
                  type="checkbox"
                />
                <label
                  class="el-has-grey-chips el-multi-select-label"
                  for="test-static-id"
                  role="option"
                  tabindex="0"
                >
                  Finance
                </label>
                <input
                  aria-checked="false"
                  aria-hidden="true"
                  class="mocked-styled-52 el-multi-select-checkbox"
                  id="test-static-id"
                  role="option"
                  type="checkbox"
                />
                <label
                  class="el-has-grey-chips el-multi-select-label"
                  for="test-static-id"
                  role="option"
                  tabindex="0"
                >
                  Productivity
                </label>
                <input
                  aria-checked="false"
                  aria-hidden="true"
                  class="mocked-styled-52 el-multi-select-checkbox"
                  id="test-static-id"
                  role="option"
                  type="checkbox"
                />
                <label
                  class="el-has-grey-chips el-multi-select-label"
                  for="test-static-id"
                  role="option"
                  tabindex="0"
                >
                  Other
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FilterForm should render component with no apps or categories 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type search"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="searchTerm"
                type="search"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                App or Developer Name
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type search"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="companyName"
                type="search"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Company Name
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type search"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="id"
                type="search"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Internal App Id
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type search"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="externalAppId"
                type="search"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                External App Id
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type date format dd/mm/yyy"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="registeredFrom"
                type="date"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Registered From
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type date format dd/mm/yyy"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="registeredTo"
                type="date"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Registered To
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type date format dd/mm/yyy"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="publicListedDateFrom"
                type="date"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Publicly Listed From
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type date format dd/mm/yyy"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="publicListedDateTo"
                type="date"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Publicly Listed To
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <label
                class="mocked-styled-41 el-label"
              >
                In Public AppMarket
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-public-all"
                  name="isPublic"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-public-all"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-public-true"
                  name="isPublic"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-public-true"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    Public
                  </span>
                </label>
                <input
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-public-false"
                  name="isPublic"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-public-false"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    Private
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <label
                class="mocked-styled-41 el-label"
              >
                Integration or AC Enabled
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-integration-all"
                  name="isDirectApi"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-integration-all"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-integration-true"
                  name="isDirectApi"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-integration-true"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    Integration
                  </span>
                </label>
                <input
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-integration-false"
                  name="isDirectApi"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-integration-false"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    AC App
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <label
                class="mocked-styled-41 el-label"
              >
                Publicly Listed
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-listed-all"
                  name="isListed"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-listed-all"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-listed-true"
                  name="isListed"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-listed-true"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    Listed
                  </span>
                </label>
                <input
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-listed-false"
                  name="isListed"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-listed-false"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    Development
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <label
                class="mocked-styled-41 el-label"
              >
                Is Charged Consumption
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-consumption-all"
                  name="isChargedConsumption"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-consumption-all"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-consumption-true"
                  name="isChargedConsumption"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-consumption-true"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    Charged
                  </span>
                </label>
                <input
                  class="mocked-styled-127 el-toggle-radio"
                  id="option-consumption-false"
                  name="isChargedConsumption"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-consumption-false"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="mocked-styled-124 el-toggle-radio-item"
                  >
                    Free
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <form>
      <div
        class="el-mb11 el-form-layout"
      >
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type search"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="searchTerm"
              type="search"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              App or Developer Name
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type search"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="companyName"
              type="search"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Company Name
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type search"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="id"
              type="search"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Internal App Id
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type search"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="externalAppId"
              type="search"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              External App Id
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type date format dd/mm/yyy"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="registeredFrom"
              type="date"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Registered From
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type date format dd/mm/yyy"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="registeredTo"
              type="date"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Registered To
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type date format dd/mm/yyy"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="publicListedDateFrom"
              type="date"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Publicly Listed From
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type date format dd/mm/yyy"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="publicListedDateTo"
              type="date"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Publicly Listed To
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              In Public AppMarket
            </label>
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            >
              <input
                checked=""
                class="mocked-styled-127 el-toggle-radio"
                id="option-public-all"
                name="isPublic"
                type="radio"
                value=""
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-public-all"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  All
                </span>
              </label>
              <input
                class="mocked-styled-127 el-toggle-radio"
                id="option-public-true"
                name="isPublic"
                type="radio"
                value="true"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-public-true"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  Public
                </span>
              </label>
              <input
                class="mocked-styled-127 el-toggle-radio"
                id="option-public-false"
                name="isPublic"
                type="radio"
                value="false"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-public-false"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  Private
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Integration or AC Enabled
            </label>
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            >
              <input
                checked=""
                class="mocked-styled-127 el-toggle-radio"
                id="option-integration-all"
                name="isDirectApi"
                type="radio"
                value=""
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-integration-all"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  All
                </span>
              </label>
              <input
                class="mocked-styled-127 el-toggle-radio"
                id="option-integration-true"
                name="isDirectApi"
                type="radio"
                value="true"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-integration-true"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  Integration
                </span>
              </label>
              <input
                class="mocked-styled-127 el-toggle-radio"
                id="option-integration-false"
                name="isDirectApi"
                type="radio"
                value="false"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-integration-false"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  AC App
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Publicly Listed
            </label>
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            >
              <input
                checked=""
                class="mocked-styled-127 el-toggle-radio"
                id="option-listed-all"
                name="isListed"
                type="radio"
                value=""
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-listed-all"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  All
                </span>
              </label>
              <input
                class="mocked-styled-127 el-toggle-radio"
                id="option-listed-true"
                name="isListed"
                type="radio"
                value="true"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-listed-true"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  Listed
                </span>
              </label>
              <input
                class="mocked-styled-127 el-toggle-radio"
                id="option-listed-false"
                name="isListed"
                type="radio"
                value="false"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-listed-false"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  Development
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Is Charged Consumption
            </label>
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            >
              <input
                checked=""
                class="mocked-styled-127 el-toggle-radio"
                id="option-consumption-all"
                name="isChargedConsumption"
                type="radio"
                value=""
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-consumption-all"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  All
                </span>
              </label>
              <input
                class="mocked-styled-127 el-toggle-radio"
                id="option-consumption-true"
                name="isChargedConsumption"
                type="radio"
                value="true"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-consumption-true"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  Charged
                </span>
              </label>
              <input
                class="mocked-styled-127 el-toggle-radio"
                id="option-consumption-false"
                name="isChargedConsumption"
                type="radio"
                value="false"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-consumption-false"
                role="button"
                tabindex="0"
              >
                <span
                  class="mocked-styled-124 el-toggle-radio-item"
                >
                  Free
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
